--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -22,6 +23,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "live-server": "^1.2.1",
     "moment": "^2.23.0",
     "node-sass": "^4.10.0",
@@ -41,7 +43,7 @@
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^10.9.0",
-    "webpack": "^4.27.0",
+    "webpack": "^4.28.1",
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
