--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Ray Nawara",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -27,7 +26,6 @@
     "enzyme-to-json": "^3.3.5",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "live-server": "^1.2.1",
     "moment": "^2.23.0",
     "node-sass": "^4.10.0",
     "normalize.css": "^8.0.1",
@@ -39,18 +37,21 @@
     "react-modal": "^3.6.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.7.0",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^10.9.0",
-    "webpack": "^4.28.1",
-    "webpack-dev-server": "^3.1.10"
+    "webpack": "^4.28.1"
   },
   "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
     "jest": "^23.6.0",
-    "webpack-cli": "^3.1.2"
+    "react-test-renderer": "^16.7.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
